--- a/style.css
+++ b/style.css
@@ -1,50 +1,48 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.wrapper {
   width: 500px;
   margin: 0 auto;
   display: block;
+}
+.header {
   text-align: right;
 }
-.aaa img {
+.header__img {
   width: 100%;
 }
-.aaa .more_inf {
+.header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.header { text-align: center;
 }
 }
-.centered-main-page-element {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
-.task {
+
+.todo-tasks__input {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  width: 318px;
 }
-.task-row-wrapper {
+.todo-tasks__input__add {
+  flex-grow: 1;
+}
+.todo-tasks__row {
   display: flex;
 }
-ul {
+.list {
   margin:0;
   padding: 0px;
 }
-li, h3 {
-  list-style:none;
-}
-input,button{
+.btn, .todo-tasks__input{
   outline:none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -53,12 +51,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for='new-task'] {
+.todo-task__title, .todo-tasks__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -66,8 +63,9 @@ label[for='new-task'] {
   padding: 30px 0 10px;
   margin: 0;
   text-transform: uppercase;
+  list-style:none;
 }
-input[type="text"] {
+.todo-tasks__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,70 +77,61 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.todo-tasks__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.todo-tasks__label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
-  width: 318px;
-}
 
 /* Task list */
-li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-li > * {
-  vertical-align: middle;
-}
 
-li > input[type="checkbox"] {
+.list__item__checkbox {
   margin: 0 10px;
 }
-li > label {
+.list__item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
-  width: 226px
-}
-button.delete img {
+
+.btn__delete__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.btn__delete__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.todo-tasks__completed .list__item__label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list__item .todo-tasks__input {
   display:none
 }
 
-ul li.editMode input[type=text] {
+.edit-mode .todo-tasks__input {
   display:inline-block;
-  width:224px
+  width:224px;
 }
 
-ul li.editMode label {
+.edit-mode .list__item__label {
   display:none;
 }
